@@ -7,7 +7,8 @@
 <!ELEMENT BUFFER ( #PCDATA ) >
 <!ATTLIST BUFFER
 	AUTORELOAD %att-bool; "TRUE"
-	AUTORELOAD_DIALOG  %att-bool; "TRUE" >
+	AUTORELOAD_DIALOG  %att-bool; "TRUE"
+	UNTITLED  %att-bool; "FALSE" >
 
 <!-- VIEW element -->
 <!ELEMENT VIEW ( PANES, GEOMETRY, DOCKING? ) >
